Update Main Page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,18 +1,31 @@
 ---
+// Layouts
+import BaseLayout from '../layouts/BaseLayout.astro';
+//Componeents
+import Header from '../components/Header.astro';
+
+import ProgrammingLanguages from '../components/ProgrammingLanguages.astro';
+
+import ProgrammingCrossPlatform from '../components/ProgrammingCrossPlatform.astro';
+
+import ProgrammingTools from '../components/ProgrammingTools.astro';
+
+import Footer from '../components/Footer.astro';
+
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Torbatti</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-		<a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
-	</body>
-</html>
+<BaseLayout>
+	
+	<Header/>
+
+
+	<ProgrammingLanguages/>
+
+	<ProgrammingCrossPlatform/>
+
+	<ProgrammingTools/>
+
+	<Footer/>
+
+
+</BaseLayout>
