Update Main Page

--- a/src/components/ProgrammingLanguages.astro
+++ b/src/components/ProgrammingLanguages.astro
@@ -4,9 +4,11 @@
 
 
 
-<div class="w-screen h-64 bg-[#0F2E34]" >
-    <p>Front End : Write It Fast</p>
-    <p>Back End : Run It Fast</p>
+<div class="w-screen h-[30rem] bg-[#0F2E34] flex flex-col justify-center items-center" >
+    <p class="text-[#91C6C2] text-md font-extrabold">Front End</p>
+    <p class="text-[#EDFCF4] text-4xl font-extrabold">Write Fast</p>
+    <p class="text-[#91C6C2] text-md font-extrabold  pt-10">Back End</p>
+    <p class="text-[#EDFCF4] text-4xl font-extrabold">Run Fast</p>
 </div>
 
 <div class="w-full h-56 bg-[#1A535C] text-[#0F2E34] font-extrabold pl-5 pt-8" >
